--- a/sass/header.scss
+++ b/sass/header.scss
@@ -88,15 +88,16 @@ ul.show {
             font-weight: 300;
             line-height: 1.125;
         }
+        z-index: 4;
     }
     .logo-m{
         grid-column: 2 / 3;
         grid-row: 1 / 2;
         img {
             width: 100%;
-            filter: brightness(50%);
+            filter: brightness(30%);
         }
-        z-index: -1;
+        z-index: 3;
     }
     .rrss{
         grid-column: 3 / -1;
